Change lodash src to https

--- a/public/index.html
+++ b/public/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />    
-    <script src="http://cdnjs.cloudflare.com/ajax/libs/lodash.js/4.17.4/lodash.js"></script>    
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/lodash.js/4.17.4/lodash.js"></script>    
     <title>Clicky Game</title>
   </head>
   <body>
